# canif

./: .gitmodules  CMakeLists.txt  README.md
include/: mat1d-functions.hpp  mat1d.hpp  mat2d-functions.hpp  mat2d.hpp  mat3d-functions.hpp  mat3d.hpp  utils.hpp
python/: gen.py
src/: mat1d-functions.cpp  mat2d-functions.cpp  mat2d.cpp  mat3d-functions.cpp  mat3d.cpp
tests/: CMakeLists.txt  main.cpp
